tests/requests/valid/100.http
GET ///keeping_slashes HTTP/1.1\r\n
\r\n
