tests/requests/invalid/obs_fold_01.http
GET / HTTP/1.1\r\n
Long: one\r\n
 two\r\n
Host: localhost\r\n
\r\n
